# FakeNewsDetection

./: .gitignore  README.md  STT_api_key.py  STT_whisper_medium.py  academic_paper.py  collect_wikipedia_data.ipynb  extract_claim.py  extract_keywords.py  main.py  pyproject.toml  requirements.txt
Prompts/: claim_evidence.yaml  fact_check.yaml  keywords.yaml
configs/: settings.py
src/analysis/: __init__.py  analyzer.py  base_llm.py
src/data/: __init__.py  arxiv_collect.py  base_data.py
src/database/: qdrant.py
src/utils/: __init__.py  logger.py  processing.py  prompt_manager.py  video_transcript.py
