[project]
name = "litellm-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.2.0",
    "dotenv>=0.9.9",
    "gradio>=5.38.0",
    "langchain-text-splitters>=0.3.8",
    "litellm>=1.74.3",
    "openai>=1.96.1",
    "pymupdf>=1.26.3",
    "qdrant-client>=1.14.3",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "yt-dlp>=2025.6.30",
]
